examples/test/testpolicy4738.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4738
  namespace: namespace97
spec:
  podSelector:
    matchLabels:
      key43: value47
      key8: value13
      key0: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value20
      podSelector:
        matchLabels:
          key12: value21
          key46: value30
